--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -125,7 +125,7 @@
   },
   "library": {
     "noItems": "No items added yet...",
-    "hint_emptyLibrary": "Select an item on canvas to add it here, or install a library from the public repository, below.",
+    "hint_emptyLibrary": "Select an item on canvas to add it here",
     "hint_emptyPrivateLibrary": "Select an item on canvas to add it here."
   },
   "buttons": {
